--- a/index.html
+++ b/index.html
@@ -7,75 +7,54 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
+
     <title>Page 1</title>
+    <link href="/assets/fonts/Montserrat/stylesheet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
     <link rel="stylesheet" href="./build/stylesheets/app.css" />
-
-    <!-- svg sprite -->
-    <svg id="mysprite" xmlns="http://www.w3.org/2000/svg" fill="none" aria-hidden="true" focusable="false">
-        <!-- Иконка крестика -->
-        <symbol id="cross" viewBox="0 0 12 12">
-            <path
-                d="M4.58578 6L0.292877 10.2929L1.70709 11.7071L6 7.41421L10.2929 11.7071L11.7071 10.2929L7.41421 6L11.7071 1.70712L10.2929 0.292908L6 4.58579L1.70712 0.292908L0.292906 1.70712L4.58578 6Z"
-                fill="currentColor" />
-        </symbol>
-        <!-- Иконка крестика -->
-
-        <!-- Иконка кебаб-меню -->
-        <symbol id="kebab" viewBox="0 0 6 28">
-            <circle cx="3.000000" cy="3.000000" r="3.000000" fill="currentColor" />
-            <circle cx="3.000000" cy="14.000000" r="3.000000" fill="currentColor" />
-            <circle cx="3.000000" cy="25.000000" r="3.000000" fill="currentColor" />
-        </symbol>
-
-        <!-- Иконка кебаб-меню -->
-    </svg>
 </head>
 
 <body>
     <div class="wrapper">
-        <header class="header" scroll-fixed>
+        <section class="section section-content section-sticky">
             <div class="container">
-                <div class="header-inner">
-                    <div class="row">
-                        <div class="col-auto">
-                            <div class="header-side header-side-left">
-                                <div class="header-navigate">
-                                    <button type="button" class="btn btn-primary btn-icon">
-                                        <svg fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                            focusable="false">
-                                            <use xlink:href="./build/sprite.svg#cross"></use>
-                                        </svg>
-                                    </button>
-                                </div>
-                                <div class="header-title">
-                                    iSelectBot
-                                </div>
+                <div class="section-sticky-inner">
+                    <div class="sticky-block">
+                        <div class="sticky-block-wrapper">
+                            <div class="sticky-block-icon sticky-block-icon-text">
+                                🎊
                             </div>
-                        </div>
-                        <div class="col">
-                            __
-                        </div>
-                        <div class="col-auto">
-                            <div class="header-button">
-                                <button type="button" class="btn btn-primary btn-icon">
-                                    <svg fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                        focusable="false">
-                                        <use xlink:href="./build/sprite.svg#kebab"></use>
-                                    </svg>
-                                </button>
+                            <div class="sticky-block-text">
+                                Будьте первым участником!
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
+        </section>
         <main class="content">
-            <div class="container">
-                123
-            </div>
+            <section class="section section-content section-main">
+                <div class="container">
+                    <div class="swiper" id="swiperWinner">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">Slide 1</div>
+                            <div class="swiper-slide">Slide 2</div>
+                            <div class="swiper-slide">Slide 3</div>
+                        </div>
+
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
+
+    <script src="./build/js/jquery-3.7.1.min.js"></script>
+    <script src="./build/js/swiper-bundle.min.js"></script>
+    <script src="./build/js/app.js"></script>
+
 </body>
 
 </html>
