create winner card

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
     <link rel="stylesheet" href="./build/stylesheets/app.css" />
+    <link rel="stylesheet" href="./build/stylesheets/main.css" />
 </head>
 
 <body>
@@ -38,7 +39,41 @@
                 <div class="container">
                     <div class="swiper" id="swiperWinner">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide">Slide 1</div>
+                            <div class="swiper-slide">
+                                <div class="winner-card">
+                                    <div class="winner-card-wrapper">
+                                        <div class="winner-card-tags">
+                                            <div class="tag">
+                                                Участников: <b>56 975</b>
+                                            </div>
+                                            <div class="tag">
+                                                Призовых мест: <b>10</b>
+                                            </div>
+                                            <div class="tag">
+                                                Завершен: <b>04.02.2024 в 17:16</b>
+                                            </div>
+                                        </div>
+                                        <div class="winner-card-image">
+                                            <img src="/assets/images/elements/cup/gold.png" />
+                                        </div>
+                                        <div class="winner-card-content">
+                                            <div class="winner-badge">
+                                                <div class="winner-badge-avatar">
+                                                    <img src="" />
+                                                </div>
+                                                <div class="winner-badge-content">
+                                                    <div class="winner-badge-name">
+                                                        Виктория
+                                                    </div>
+                                                    <div class="winner-badge-description">
+                                                        Победитель розыгрыша
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="swiper-slide">Slide 2</div>
                             <div class="swiper-slide">Slide 3</div>
                         </div>
