--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>Page 1</title>
+    <title>Первый экран, когда только открыл бота</title>
     <link href="/assets/fonts/Montserrat/stylesheet.css" rel="stylesheet" />
     <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
@@ -37,50 +37,7 @@
         <main class="content">
             <section class="section section-content section-main">
                 <div class="container">
-                    <div class="swiper" id="swiperWinner">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="winner-card">
-                                    <div class="winner-card-wrapper">
-                                        <div class="winner-card-tags">
-                                            <div class="tag">
-                                                Участников: <b>56 975</b>
-                                            </div>
-                                            <div class="tag">
-                                                Призовых мест: <b>10</b>
-                                            </div>
-                                            <div class="tag">
-                                                Завершен: <b>04.02.2024 в 17:16</b>
-                                            </div>
-                                        </div>
-                                        <div class="winner-card-image">
-                                            <img src="/assets/images/elements/cup/gold.png" />
-                                        </div>
-                                        <div class="winner-card-content">
-                                            <div class="winner-badge">
-                                                <div class="winner-badge-avatar">
-                                                    <img src="" />
-                                                </div>
-                                                <div class="winner-badge-content">
-                                                    <div class="winner-badge-name">
-                                                        Виктория
-                                                    </div>
-                                                    <div class="winner-badge-description">
-                                                        Победитель розыгрыша
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">Slide 2</div>
-                            <div class="swiper-slide">Slide 3</div>
-                        </div>
-
-                        <div class="swiper-button-prev"></div>
-                        <div class="swiper-button-next"></div>
-                    </div>
+                    123
                 </div>
             </section>
         </main>
