--- a/index-2.html
+++ b/index-2.html
@@ -8,7 +8,7 @@
         content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>Первый экран, когда только открыл бота</title>
+    <title>Проверка участия в розыгрыше</title>
     <link href="/assets/fonts/Montserrat/stylesheet.css" rel="stylesheet" />
     <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
@@ -22,13 +22,29 @@
         <header class="section section-content section-sticky">
             <div class="container">
                 <div class="section-sticky-inner">
-                    <div class="sticky-block pointer-events-none">
+                    <div class="sticky-block">
                         <div class="sticky-block-wrapper">
-                            <div class="sticky-block-icon sticky-block-icon-text">
-                                🎊
+                            <div class="sticky-block-group">
+                                <div class="sticky-block-icon">
+                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                </div>
+                                <div class="sticky-block-icon">
+                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                </div>
+                                <div class="sticky-block-icon">
+                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                </div>
                             </div>
                             <div class="sticky-block-text">
-                                Будьте первым участником!
+                                13 252 участника
+                            </div>
+                            <div class="sticky-block-arrow">
+                                <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M6.741 17.3732L5.32678 15.959L11.4947 9.79106L5.32678 3.62317L6.741 2.20896L14.3231 9.79106L6.741 17.3732Z"
+                                        fill="currentColor" />
+                                </svg>
                             </div>
                         </div>
                     </div>
@@ -37,7 +53,7 @@
         </header>
         <!-- Верхний блок -->
 
-        <!-- контент -->
+        <!-- Контент -->
         <main class="content">
             <section class="section section-content section-main">
                 <div class="container">
@@ -51,8 +67,8 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="section-main-text text-center text-white">
-                                        Нажмите на кнопку ниже, <br>
-                                        чтобы участвовать в розыгрыше
+                                        Проверяем, выполнены ли <br>
+                                        все условия розыгрыша...
                                     </div>
                                 </div>
                             </div>
@@ -61,14 +77,14 @@
                 </div>
             </section>
         </main>
-        <!-- контент -->
+        <!-- Контент -->
 
         <!-- Нижний блок -->
         <div class="bottom">
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        <a href="index-2.html" class="btn btn-lg btn-primary w-100">
+                        <a href="success.html" class="btn btn-lg btn-primary w-100">
                             Принять участие
                         </a>
                     </div>
