--- a/winner.html
+++ b/winner.html
@@ -18,6 +18,8 @@
 
 <body>
     <div class="wrapper">
+
+        <!-- Контент -->
         <main class="content">
             <section class="section section-content section-winner">
                 <div class="container">
@@ -136,21 +138,28 @@
                                 <div class="swiper-button-next"></div>
                             </div>
                         </div>
-
-                        <div class="section-winner-content">
-                            <div class="section-winner-list">
-                                Здесь будет контент...
-                            </div>
-                        </div>
                     </div>
                 </div>
             </section>
         </main>
+        <!-- Контент -->
+
+        <!-- Нижний блок -->
+        <div class="bottom">
+            <div class="bottom-inner">
+                <div class="row g-4">
+                    <div class="col-12">
+                        Победители
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Нижний блок -->
     </div>
 
     <script src="./build/js/jquery-3.7.1.min.js"></script>
     <script src="./build/js/swiper-bundle.min.js"></script>
-    <script src="./build/js/page/winner.js"></script>
+    <script src="./build/js/app.js"></script>
 
 </body>
 
