--- a/index-2.html
+++ b/index-2.html
@@ -62,7 +62,7 @@
                             <div class="row g-3">
                                 <div class="col-12">
                                     <div class="section-main-animation">
-                                        <div id="cube-animation"></div>
+                                        <div id="demo-animation"></div>
                                     </div>
                                 </div>
                                 <div class="col-12">
