--- a/success.html
+++ b/success.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader-container">
+        <div class="preloader">
+            <div class="spinner-grow text-white"></div>
+        </div>
+    </div>
+    <!-- preloader -->
+
     <div class="wrapper">
         <!-- Верхний блок -->
         <header class="section section-content section-sticky">
@@ -61,7 +69,7 @@
                         <div class="section-main-primary">
                             <div class="row g-3">
                                 <div class="col-12">
-                                    <div class="section-main-animation">
+                                    <div class="block-animation">
                                         <div id="success-animation"></div>
                                     </div>
                                 </div>
