--- a/winner.html
+++ b/winner.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader-container">
+        <div class="preloader">
+            <div class="spinner-grow text-white"></div>
+        </div>
+    </div>
+    <!-- preloader -->
+
     <div class="wrapper">
 
         <!-- Контент -->
