--- a/index-2.html
+++ b/index-2.html
@@ -17,6 +17,14 @@
 </head>
 
 <body>
+    <!-- preloader -->
+    <div class="preloader-container">
+        <div class="preloader">
+            <div class="spinner-grow text-white"></div>
+        </div>
+    </div>
+    <!-- preloader -->
+
     <div class="wrapper">
         <!-- Верхний блок -->
         <header class="section section-content section-sticky">
@@ -61,7 +69,7 @@
                         <div class="section-main-primary">
                             <div class="row g-3">
                                 <div class="col-12">
-                                    <div class="section-main-animation">
+                                    <div class="block-animation">
                                         <div id="demo-animation"></div>
                                     </div>
                                 </div>
@@ -84,8 +92,11 @@
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        <a href="success.html" class="btn btn-lg btn-primary w-100">
-                            Принять участие
+                        <a href="success.html" class="btn btn-lg btn-primary w-100 pointer-events-none disabled"
+                            disabled>
+                            <div class="spinner-border" role="status">
+                                <span class="visually-hidden">Loading...</span>
+                            </div>
                         </a>
                     </div>
                     <div class="col-12">
