copy text extend for forms

--- a/success.html
+++ b/success.html
@@ -93,8 +93,10 @@
                 <div class="row g-4">
                     <div class="col-12">
                         <div class="form-relative">
-                            <input type="text" class="form-control text-center" value="4444 5555 6666" disabled />
-                            <div class="form-icon form-icon-middle form-icon-end">
+                            <input type="text" value="4444 5555 6666" class="form-control text-center disabled"
+                                id="winner_id" />
+                            <button class="btn btn-icon form-icon form-icon-middle form-icon-end"
+                                data-form-copy="winner_id">
                                 <svg width="20" height="21" viewBox="0 0 20 21" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_4_436)">
@@ -108,7 +110,7 @@
                                         </clipPath>
                                     </defs>
                                 </svg>
-                            </div>
+                            </button>
                         </div>
                     </div>
                     <div class="col-12">
