--- a/success.html
+++ b/success.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="section-sticky-inner">
                     <div class="sticky-block">
-                        <div class="sticky-block-wrapper">
+                        <div class="sticky-block-wrapper" menu-toggle="">
                             <div class="sticky-block-group">
                                 <div class="sticky-block-icon">
                                     <img src="/assets/images/elements/badge/avatar-1.png" />
@@ -128,6 +128,39 @@
             </div>
         </div>
         <!-- Нижний блок -->
+
+        <!-- Менюшка -->
+        <div class="menu">
+            <div class="menu-wrapper">
+                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
+                факта: сложившаяся структура организации позволяет выполнить важные задания по разработке экономической
+                целесообразности принимаемых решений. Таким образом, постоянный количественный рост и сфера нашей
+                активности не оставляет шанса для существующих финансовых и административных условий. Современные
+                технологии достигли такого уровня, что перспективное планирование требует анализа системы обучения
+                кадров, соответствующей насущным потребностям.
+
+                В целом, конечно, существующая теория способствует повышению качества поэтапного и последовательного
+                развития общества. Идейные соображения высшего порядка, а также социально-экономическое развитие
+                предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач.
+
+                Принимая во внимание показатели успешности, повышение уровня гражданского сознания говорит о
+                возможностях экономической целесообразности принимаемых решений. Идейные соображения высшего порядка, а
+                также современная методология разработки способствует повышению качества укрепления моральных ценностей.
+                Для современного мира перспективное планирование предоставляет широкие возможности для распределения
+                внутренних резервов и ресурсов.
+            </div>
+            <div class="menu-close">
+                <button type="button" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
+                    <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <path id="Union" d="M2 9.95239L7 5L7 9L19 9L19 11L7 11L7 15L2 9.95239Z" fill="currentColor"
+                            fill-opacity="1.000000" fill-rule="evenodd" />
+                    </svg>
+                    <span class="btn-icon-text">Вернуться назад</span>
+                </button>
+            </div>
+        </div>
+        <!-- Менюшка -->
     </div>
 
     <script src="./build/js/jquery-3.7.1.min.js"></script>
