--- a/success.html
+++ b/success.html
@@ -132,22 +132,34 @@
         <!-- Менюшка -->
         <div class="menu">
             <div class="menu-wrapper">
-                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
-                факта: сложившаяся структура организации позволяет выполнить важные задания по разработке экономической
-                целесообразности принимаемых решений. Таким образом, постоянный количественный рост и сфера нашей
-                активности не оставляет шанса для существующих финансовых и административных условий. Современные
-                технологии достигли такого уровня, что перспективное планирование требует анализа системы обучения
-                кадров, соответствующей насущным потребностям.
-
-                В целом, конечно, существующая теория способствует повышению качества поэтапного и последовательного
-                развития общества. Идейные соображения высшего порядка, а также социально-экономическое развитие
-                предопределяет высокую востребованность позиций, занимаемых участниками в отношении поставленных задач.
-
-                Принимая во внимание показатели успешности, повышение уровня гражданского сознания говорит о
-                возможностях экономической целесообразности принимаемых решений. Идейные соображения высшего порядка, а
-                также современная методология разработки способствует повышению качества укрепления моральных ценностей.
-                Для современного мира перспективное планирование предоставляет широкие возможности для распределения
-                внутренних резервов и ресурсов.
+                <div class="user-list">
+                    <div class="user-card">
+                        <div class="user-card-wrapper">
+                            <div class="user-card-counter"></div>
+                            <div class="user-card-avatar">
+                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                            </div>
+                            <div class="user-card-content">
+                                <div class="user-card-name">
+                                    Валентин
+                                </div>
+                                <div class="user-card-description">
+                                    ID: <span user-id>1651 9684 9481</span>
+                                </div>
+                            </div>
+                            <div class="user-card-actions">
+                                <a href="" class="btn btn-icon user-card-btn">
+                                    <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <path id="icon"
+                                            d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
+                                            fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="menu-close">
                 <button type="button" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
