--- a/success.html
+++ b/success.html
@@ -173,6 +173,10 @@
             </div>
         </div>
         <!-- Менюшка -->
+
+        <!-- Подсказка -->
+        <div class="hint" data-hint-id="winner_id" data-hint-text="Скопировано"></div>
+        <!-- Подсказка -->
     </div>
 
     <script src="./build/js/jquery-3.7.1.min.js"></script>
