end of first part

--- a/success.html
+++ b/success.html
@@ -153,7 +153,7 @@
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <path id="icon"
                                             d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
-                                            fill="currentColor" fill-opacity="1.000000" fill-rule="evenodd" />
+                                            fill="currentColor" fill-rule="evenodd" />
                                     </svg>
                                 </a>
                             </div>
