--- a/index-2.html
+++ b/index-2.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="section-sticky-inner">
                     <div class="sticky-block">
-                        <div class="sticky-block-wrapper">
+                        <div class="sticky-block-wrapper" menu-toggle="">
                             <div class="sticky-block-group">
                                 <div class="sticky-block-icon">
                                     <img src="/assets/images/elements/badge/avatar-1.png" />
@@ -146,6 +146,51 @@
             </div>
         </div>
         <!-- Нижний блок -->
+
+        <!-- Менюшка -->
+        <div class="menu">
+            <div class="menu-wrapper">
+                <div class="user-list">
+                    <div class="user-card">
+                        <div class="user-card-wrapper">
+                            <div class="user-card-counter"></div>
+                            <div class="user-card-avatar">
+                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                            </div>
+                            <div class="user-card-content">
+                                <div class="user-card-name">
+                                    Валентин
+                                </div>
+                                <div class="user-card-description">
+                                    ID: <span user-id>1651 9684 9481</span>
+                                </div>
+                            </div>
+                            <div class="user-card-actions">
+                                <a href="" class="btn btn-icon user-card-btn">
+                                    <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <path id="icon"
+                                            d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
+                                            fill="currentColor" fill-rule="evenodd" />
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-close">
+                <button type="button" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
+                    <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <path id="Union" d="M2 9.95239L7 5L7 9L19 9L19 11L7 11L7 15L2 9.95239Z" fill="currentColor"
+                            fill-opacity="1.000000" fill-rule="evenodd" />
+                    </svg>
+                    <span class="btn-icon-text">Вернуться назад</span>
+                </button>
+            </div>
+        </div>
+        <!-- Менюшка -->
     </div>
 
     <script src="./build/js/jquery-3.7.1.min.js"></script>
