create invalid, error, finish pages

--- a/winner.html
+++ b/winner.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
     <link rel="stylesheet" href="./build/stylesheets/app.css" />
-    <link rel="stylesheet" href="./build/stylesheets/winner.css" />
+    <link rel="stylesheet" href="./build/stylesheets/main.css" />
 </head>
 
 <body>
@@ -29,10 +29,10 @@
 
         <!-- Контент -->
         <main class="content">
-            <section class="section section-content section-winner">
+            <section class="section section-content section-main">
                 <div class="container">
-                    <div class="section-winner-inner">
-                        <div class="section-winner-primary">
+                    <div class="section-main-inner">
+                        <div class="section-main-primary">
                             <div class="swiper" id="swiperWinner">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide" swiper-winner="1">
