--- a/winner.html
+++ b/winner.html
@@ -157,7 +157,89 @@
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        Победители
+                        <div class="user-list user-list-winner">
+                            <div class="user-card">
+                                <div class="user-card-wrapper">
+                                    <div class="user-card-counter"></div>
+                                    <div class="user-card-avatar">
+                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    </div>
+                                    <div class="user-card-content">
+                                        <div class="user-card-name">
+                                            Валентин
+                                        </div>
+                                        <div class="user-card-description">
+                                            ID: <span user-id>1651 9684 9481</span>
+                                        </div>
+                                    </div>
+                                    <div class="user-card-actions">
+                                        <a href="" class="btn btn-icon user-card-btn">
+                                            <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <path id="icon"
+                                                    d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
+                                                    fill="currentColor" fill-rule="evenodd" />
+                                            </svg>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="user-card">
+                                <div class="user-card-wrapper">
+                                    <div class="user-card-counter"></div>
+                                    <div class="user-card-avatar">
+                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    </div>
+                                    <div class="user-card-content">
+                                        <div class="user-card-name">
+                                            Валентин
+                                        </div>
+                                        <div class="user-card-description">
+                                            ID: <span user-id>1651 9684 9481</span>
+                                        </div>
+                                    </div>
+                                    <div class="user-card-actions">
+                                        <a href="" class="btn btn-icon user-card-btn">
+                                            <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <path id="icon"
+                                                    d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
+                                                    fill="currentColor" fill-rule="evenodd" />
+                                            </svg>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="user-card">
+                                <div class="user-card-wrapper">
+                                    <div class="user-card-counter"></div>
+                                    <div class="user-card-avatar">
+                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    </div>
+                                    <div class="user-card-content">
+                                        <div class="user-card-name">
+                                            Валентин
+                                        </div>
+                                        <div class="user-card-description">
+                                            ID: <span user-id>1651 9684 9481</span>
+                                        </div>
+                                    </div>
+                                    <div class="user-card-actions">
+                                        <a href="" class="btn btn-icon user-card-btn">
+                                            <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <path id="icon"
+                                                    d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
+                                                    fill="currentColor" fill-rule="evenodd" />
+                                            </svg>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
