--- a/finish.html
+++ b/finish.html
@@ -70,7 +70,7 @@
                             <div class="row g-3">
                                 <div class="col-12">
                                     <div class="block-animation">
-                                        <div id="success-animation"></div>
+                                        <div id="finish-animation"></div>
                                     </div>
                                 </div>
                                 <div class="col-12">
@@ -94,7 +94,37 @@
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        Плашка с юзером
+                        <div class="user-badge">
+                            <div class="user-badge-wrapper">
+                                <div class="user-badge-counter"></div>
+                                <div class="user-badge-avatar">
+                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                </div>
+                                <div class="user-badge-content">
+                                    <div class="user-badge-name">
+                                        Валентин
+                                    </div>
+                                    <div class="user-badge-description">
+                                        <div class="user-status">
+                                            <div class="user-status-wrapper">
+                                                🥚 Новичок
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user-badge-actions">
+                                    <a href="" class="btn btn-icon user-badge-btn">
+                                        <svg width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                            xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <path id="icon"
+                                                d="M10.7856 27.7971L8.52295 25.5343L18.3916 15.6657L8.52295 5.79706L10.7856 3.5343L22.917 15.6657L10.7856 27.7971Z"
+                                                fill="currentColor" fill-opacity="0.250000" fill-rule="evenodd" />
+                                        </svg>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12">
                         <div class="devider devider-horizontal"></div>
