--- a/error.html
+++ b/error.html
@@ -70,7 +70,7 @@
                             <div class="row g-3">
                                 <div class="col-12">
                                     <div class="block-animation">
-                                        <div id="success-animation"></div>
+                                        <div id="error-animation"></div>
                                     </div>
                                 </div>
                                 <div class="col-12">
