--- a/exist.html
+++ b/exist.html
@@ -8,7 +8,7 @@
         content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, user-scalable=0" />
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <title>Первый экран, когда только открыл бота</title>
+    <title>Когда юзер участвует в нескольких конкурсах</title>
     <link href="/assets/fonts/Montserrat/stylesheet.css" rel="stylesheet" />
     <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
@@ -61,6 +61,28 @@
                                     <div class="section-main-text text-center text-white">
                                         Нажмите на кнопку ниже, <br>
                                         чтобы участвовать в розыгрыше
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="container">
+                                        <div class="badge">
+                                            <div class="badge-wrapper">
+                                                <div class="badge-description">
+                                                    Я уже участвую в <span data-contest-exist="">2</span> розыгрышах
+                                                </div>
+                                                <div class="badge-actions">
+                                                    <svg width="20.000000" height="20.000000" viewBox="0 0 20 20"
+                                                        fill="none" xmlns="http://www.w3.org/2000/svg"
+                                                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                        <path id="icon"
+                                                            d="M6.74072 17.3732L5.32666 15.959L11.4946 9.79106L5.32666 3.62317L6.74072 2.20895L14.3228 9.79106L6.74072 17.3732Z"
+                                                            fill="currentColor" fill-opacity="0.850000"
+                                                            fill-rule="evenodd" />
+                                                    </svg>
+                                                </div>
+                                            </div>
+                                            <a href="" class="stretched-link"></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
