--- a/index-2.html
+++ b/index-2.html
@@ -70,7 +70,7 @@
                             <div class="row g-3">
                                 <div class="col-12">
                                     <div class="block-animation">
-                                        <div id="demo-animation"></div>
+                                        <div id="check-animation"></div>
                                     </div>
                                 </div>
                                 <div class="col-12">
