--- a/invalid.html
+++ b/invalid.html
@@ -70,7 +70,7 @@
                             <div class="row g-3">
                                 <div class="col-12">
                                     <div class="block-animation">
-                                        <div id="success-animation"></div>
+                                        <div id="invalid-animation"></div>
                                     </div>
                                 </div>
                                 <div class="col-12">
