user profile create

--- a/finish.html
+++ b/finish.html
@@ -107,7 +107,8 @@
                                     <div class="user-badge-description">
                                         <div class="user-status">
                                             <div class="user-status-wrapper">
-                                                🥚 Новичок
+                                                <span>🥚</span>
+                                                <span>Новичок</span>
                                             </div>
                                         </div>
                                     </div>
