--- a/user.html
+++ b/user.html
@@ -53,7 +53,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="tooltip-icon" data-tooltip-position="bottom center"
-                                                        data-tooltip-toggle="user-tooltipe">
+                                                        data-tooltip-toggle="user-tooltip">
                                                         <svg width="14.400391" height="14.400024"
                                                             viewBox="0 0 14.4004 14.4" fill="none"
                                                             xmlns="http://www.w3.org/2000/svg"
@@ -164,7 +164,7 @@
         <!-- Нижний блок -->
 
         <!-- Подсказки -->
-        <div class="tooltip" data-tooltip-id="user-tooltipe">
+        <div class="tooltip" data-tooltip-id="user-tooltip">
             <div class="tooltip-wrapper">
                 Чем больше побед, <br>
                 тем выше ваш уровень.
