--- a/finish.html
+++ b/finish.html
@@ -114,7 +114,7 @@
                                     </div>
                                 </div>
                                 <div class="user-badge-actions">
-                                    <a href="" class="btn btn-icon user-badge-btn">
+                                    <div class="btn btn-icon user-badge-btn">
                                         <svg width="32.000000" height="32.000000" viewBox="0 0 32 32" fill="none"
                                             xmlns="http://www.w3.org/2000/svg"
                                             xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -122,9 +122,10 @@
                                                 d="M10.7856 27.7971L8.52295 25.5343L18.3916 15.6657L8.52295 5.79706L10.7856 3.5343L22.917 15.6657L10.7856 27.7971Z"
                                                 fill="currentColor" fill-opacity="0.250000" fill-rule="evenodd" />
                                         </svg>
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
+                            <a href="/user.html" class="stretched-link"></a>
                         </div>
                     </div>
                     <div class="col-12">
@@ -154,23 +155,24 @@
                             </div>
                             <div class="user-card-content">
                                 <div class="user-card-name">
-                                    Валентин
+                                    Валентина
                                 </div>
                                 <div class="user-card-description">
                                     ID: <span user-id>1651 9684 9481</span>
                                 </div>
                             </div>
                             <div class="user-card-actions">
-                                <a href="" class="btn btn-icon user-card-btn">
+                                <div class="btn btn-icon user-card-btn">
                                     <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <path id="icon"
                                             d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
                                             fill="currentColor" fill-rule="evenodd" />
                                     </svg>
-                                </a>
+                                </div>
                             </div>
                         </div>
+                        <a href="/user.html" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
