--- a/user.html
+++ b/user.html
@@ -43,7 +43,7 @@
                                             </div>
                                             <div class="user-badge-content">
                                                 <div class="user-badge-name">
-                                                    Валентин
+                                                    Валентина
                                                 </div>
                                                 <div class="user-badge-description">
                                                     <div class="user-status user-status-light">
@@ -164,14 +164,14 @@
         <!-- Нижний блок -->
 
         <!-- Подсказки -->
+        <div class="hint" data-hint-id="winner_id" data-hint-text="Скопировано"></div>
+
         <div class="tooltip" data-tooltip-id="user-tooltip">
             <div class="tooltip-wrapper">
                 Чем больше побед, <br>
                 тем выше ваш уровень.
             </div>
         </div>
-
-        <div class="hint" data-hint-id="winner_id" data-hint-text="Скопировано"></div>
         <!-- Подсказки -->
     </div>
 
