--- a/winner.html
+++ b/winner.html
@@ -65,6 +65,7 @@
                                                                 Победитель розыгрыша
                                                             </div>
                                                         </div>
+                                                        <a href="/user.html" class="stretched-link"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -100,6 +101,7 @@
                                                                 Победитель розыгрыша
                                                             </div>
                                                         </div>
+                                                        <a href="/user.html" class="stretched-link"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -135,6 +137,7 @@
                                                                 Победитель розыгрыша
                                                             </div>
                                                         </div>
+                                                        <a href="/user.html" class="stretched-link"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -173,7 +176,7 @@
                                         </div>
                                     </div>
                                     <div class="user-card-actions">
-                                        <a href="" class="btn btn-icon user-card-btn">
+                                        <div class="btn btn-icon user-card-btn">
                                             <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -181,9 +184,10 @@
                                                     d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
                                                     fill="currentColor" fill-rule="evenodd" />
                                             </svg>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
+                                <a href="/user.html" class="stretched-link"></a>
                             </div>
                             <div class="user-card">
                                 <div class="user-card-wrapper">
@@ -200,7 +204,7 @@
                                         </div>
                                     </div>
                                     <div class="user-card-actions">
-                                        <a href="" class="btn btn-icon user-card-btn">
+                                        <div class="btn btn-icon user-card-btn">
                                             <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -208,9 +212,10 @@
                                                     d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
                                                     fill="currentColor" fill-rule="evenodd" />
                                             </svg>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
+                                <a href="/user.html" class="stretched-link"></a>
                             </div>
                             <div class="user-card">
                                 <div class="user-card-wrapper">
@@ -227,7 +232,7 @@
                                         </div>
                                     </div>
                                     <div class="user-card-actions">
-                                        <a href="" class="btn btn-icon user-card-btn">
+                                        <div class="btn btn-icon user-card-btn">
                                             <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -235,9 +240,10 @@
                                                     d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
                                                     fill="currentColor" fill-rule="evenodd" />
                                             </svg>
-                                        </a>
+                                        </div>
                                     </div>
                                 </div>
+                                <a href="/user.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
