--- a/success.html
+++ b/success.html
@@ -148,16 +148,17 @@
                                 </div>
                             </div>
                             <div class="user-card-actions">
-                                <a href="" class="btn btn-icon user-card-btn">
+                                <div class="btn btn-icon user-card-btn">
                                     <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                         <path id="icon"
                                             d="M6.74097 17.3732L5.32678 15.959L11.4946 9.79108L5.32678 3.62317L6.74097 2.20898L14.3231 9.79108L6.74097 17.3732Z"
                                             fill="currentColor" fill-rule="evenodd" />
                                     </svg>
-                                </a>
+                                </div>
                             </div>
                         </div>
+                        <a href="/user.html" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
