create mydraws & alldraws

--- a/user.html
+++ b/user.html
@@ -153,10 +153,11 @@
                 </div>
                 <div class="row g-3">
                     <div class="col-12">
-                        <a href="" class="btn btn-lg btn-primary w-100">Все розыгрыши</a>
+                        <a href="/alldraws.html" class="btn btn-lg btn-primary w-100">Все розыгрыши</a>
                     </div>
                     <div class="col-12">
-                        <a href="" class="btn btn-lg btn-blue btn-colored btn-dimmed w-100">Мои розыгрыши</a>
+                        <a href="/mydraws.html" class="btn btn-lg btn-blue btn-colored btn-dimmed w-100">Мои
+                            розыгрыши</a>
                     </div>
                 </div>
             </div>
