index-2 to check

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        <a href="index-2.html" class="btn btn-lg btn-primary w-100">
+                        <a href="check.html" class="btn btn-lg btn-primary w-100">
                             Принять участие
                         </a>
                     </div>
