--- a/check.html
+++ b/check.html
@@ -92,8 +92,8 @@
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        <a href="success.html" class="btn btn-lg btn-primary w-100 pointer-events-none disabled"
-                            disabled>
+                        <a href="success.html"
+                            class="btn btn-lg btn-primary btn-gradient w-100 pointer-events-none disabled" disabled>
                             <div class="spinner-border" role="status">
                                 <span class="visually-hidden">Loading...</span>
                             </div>
