--- a/exist.html
+++ b/exist.html
@@ -81,7 +81,7 @@
                                                     </svg>
                                                 </div>
                                             </div>
-                                            <a href="" class="stretched-link"></a>
+                                            <a href="/mydraws.html" class="stretched-link"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -98,7 +98,7 @@
             <div class="bottom-inner">
                 <div class="row g-4">
                     <div class="col-12">
-                        <a href="check.html" class="btn btn-lg btn-primary w-100">
+                        <a href="check.html" class="btn btn-lg btn-primary btn-gradient w-100">
                             Принять участие
                         </a>
                     </div>
