--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <title>Участник конкурса</title>
-    <link href="/assets/fonts/Montserrat/stylesheet.css" rel="stylesheet" />
+    <link href="./assets/fonts/Montserrat/stylesheet.css" rel="stylesheet" />
     <link rel="stylesheet" href="./build/stylesheets/swiper-bundle.min.css">
     <link rel="preload" as="style" href="./build/stylesheets/app.css" />
     <link rel="stylesheet" href="./build/stylesheets/app.css" />
