--- a/check.html
+++ b/check.html
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/user.html" class="stretched-link"></a>
+                        <a href="user.html" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
