--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <div class="row g-4 align-items-center">
                                 <div class="col-auto">
                                     <div class="card-link-icon">
-                                        <img src="./assets/images/elements/card/link/demo.png" />
+                                        <img src="/assets/images/elements/card/link/demo.png" />
                                     </div>
                                 </div>
                                 <div class="col">
